--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "sever.js",
   "scripts": {
     "dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "serve": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
